Make sure mobile nav covers entire screen

--- a/stylesheets/_globals.scss
+++ b/stylesheets/_globals.scss
@@ -29,6 +29,7 @@ body {
   font-weight: 400;
   color: var(--color-foreground);
   background: url("../assets/background-stars.svg") var(--color-background);
+  position: relative;
 }
 
 ul {
