--- a/stylesheets/_header.scss
+++ b/stylesheets/_header.scss
@@ -4,15 +4,14 @@ header {
   justify-content: space-between;
   align-items: center;
   border-bottom: 1px solid var(--color-foreground-20);
-  position: relative;
 
   .title {
     font-family: "Antonio", sans-serif;
     font-weight: 500;
     font-size: 1.75em;
     text-transform: uppercase;
+    line-height: 1.286;
     letter-spacing: -1.05px;
-    justify-content: space-between;
   }
 
   nav {
@@ -22,6 +21,7 @@ header {
       content: "";
       display: block;
       background: url("../assets/icon-hamburger.svg") no-repeat center;
+      background-size: contain;
       width: 1.5em;
       height: 2.25em;
     }
@@ -40,13 +40,12 @@ header {
   ul {
     display: none;
     position: absolute;
-    top: calc(100% + 1px);
+    top: calc(4.375em - 1px);
     left: 0;
     right: 0;
+    bottom: 0;
     padding: 1.5em;
     background: var(--color-background);
-    height: 100vh;
-    opacity: 1;
   }
 
   li {
